[package]
description = "Escrow Service on Solana"
edition = "2025"
name = "escrow-service"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_service"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
